--- a/index.html
+++ b/index.html
@@ -93,54 +93,56 @@
               </div>
               <br>
               <div class="text-center">
-                  <ul class="list-inline list-social-icons mb-0">
-                    <li class="list-inline-item">
-                      <a href="mailto:dipto.das@utoronto.ca" target="_blank" aria-label="Email">
-                        <span class="fa-stack fa-lg">
-                          <i class="fa fa-circle fa-stack-2x"></i>
-                          <i aria-hidden="true" title="Email" class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                        </span>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="https://scholar.google.com/citations?user=yRHRA4QAAAAJ&hl=en" target="_blank" aria-label="Google Scholar">
-                        <span class="fa-stack fa-lg">
-                          <i class="fa fa-circle fa-stack-2x"></i>
-                          <i aria-hidden="true" title="Google Scholar" class="ai ai-google-scholar fa-stack-1x fa-inverse"></i>
-                        </span>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="https://www.linkedin.com/in/diptodas/" target="_blank" aria-label="Linkedin">
-                        <span class="fa-stack fa-lg">
-                          <i class="fa fa-circle fa-stack-2x"></i>
-                          <i aria-hidden="true" title="Linkedin" class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
-                        </span>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="https://calendar.google.com/calendar/embed?src=dipto.cs.uoft%40gmail.com&ctz=America%2FDenver" target="_blank" aria-label="Calendar">
-                        <span class="fa-stack fa-lg">
-                          <i class="fa fa-circle fa-stack-2x"></i>
-                          <i aria-hidden="true" title="Calendar" class="fa fa-calendar fa-stack-1x fa-inverse"></i>
-                        </span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="list-inline list-social-icons mb-0">
+                  <li class="list-inline-item text-center">
+                    <a href="mailto:dipto.das@utoronto.ca" target="_blank" aria-label="Email" class="icon-link">
+                      <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i aria-hidden="true" title="Email" class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                      </span>
+                      <div class="icon-label">Email</div>
+                    </a>
+                  </li>
+                  <li class="list-inline-item text-center">
+                    <a href="https://scholar.google.com/citations?user=yRHRA4QAAAAJ&hl=en" target="_blank" aria-label="Google Scholar" class="icon-link">
+                      <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i aria-hidden="true" title="Google Scholar" class="ai ai-google-scholar fa-stack-1x fa-inverse"></i>
+                      </span>
+                      <div class="icon-label">Scholar</div>
+                    </a>
+                  </li>
+                  <li class="list-inline-item text-center">
+                    <a href="https://www.linkedin.com/in/diptodas/" target="_blank" aria-label="LinkedIn" class="icon-link">
+                      <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i aria-hidden="true" title="LinkedIn" class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
+                      </span>
+                      <div class="icon-label">LinkedIn</div>
+                    </a>
+                  </li>
+                  <li class="list-inline-item text-center">
+                    <a href="https://calendar.google.com/calendar/embed?src=dipto.cs.uoft%40gmail.com&ctz=America%2FDenver" target="_blank" aria-label="Calendar" class="icon-link">
+                      <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i aria-hidden="true" title="Calendar" class="fa fa-calendar-alt fa-stack-1x fa-inverse"></i>
+                      </span>
+                      <div class="icon-label">Calendar</div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
               <br>  
-              <div class="subheading mb-3 text-primary">Name Pronunciation</div>
+              <div class="subheading mb-1 text-primary">Name Pronunciation</div>
 	            	<p class="justify">
-              		Dip-toh (Dipto) Daash (Das). Dipto means <em>bright</em> in Bengali. Play the audio below to listen to the pronunciation of my name.
-              		<br><br>
-              		<audio controls>
-      	 						<source src="img/diptodas.mp3" type="audio/mpeg">
-      						</audio>
-                  <br><br>
-                  Spelling in Bengali: <span class="bn-name">দীপ্ত দাস</span>
-	              	<br>
-	              	Pronouns: He/him/his
-	              </p>
+                  Dip-toh (Dipto) Daash (Das). Dipto means <em>bright</em> in Bengali. Play the audio below to listen to the pronunciation of my name.
+                  <audio controls class="name-audio">
+                    <source src="img/diptodas.mp3" type="audio/mpeg">
+                  </audio>
+                  Spelling in Bengali: <span class="bn-name">দীপ্ত দাস</span><br>
+                  Pronouns: He/him/his
+                </p>
             </div>
 
 
