--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
     <title>Dipto Das</title>
 
+    <meta name="description" content="Postdoctoral fellow in Computer Science at the University of Toronto. I study the sociotechnical systems and their impacts, focusing on AI fairness, platform governance, and community-centered evaluation." />
+    <meta name="robots" content="max-snippet:160" />
+    <meta property="og:description" content="Human-Computer Interaction and Algorithmic Fairness researcher and Postdoctoral fellow in Computer Science at the University of Toronto" />
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -83,7 +87,7 @@
           </div>
           <div class="row mb-5">
 
-            <div class="col-lg-3 col-md-4 mb-4 mb-md-0">
+            <div class="col-lg-3 col-md-4 mb-4 mb-md-0" data-nosnippet>
               <div class="text-center ">
                 <br>
                 <img class="img-fluid rounded-circle shadow" 
@@ -1147,6 +1151,25 @@
   // Initial draw
   applyFilters();
 })();
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Dipto Das",
+  "jobTitle": "Postdoctoral Fellow",
+  "affiliation": {
+    "@type": "Organization",
+    "name": "University of Toronto, Department of Computer Science"
+  },
+  "url": "https://www.diptodas.net/",
+  "sameAs": [
+    "https://scholar.google.com/citations?user=yRHRA4QAAAAJ",
+    "https://www.linkedin.com/in/diptodas/"
+  ],
+  "description": "Postdoctoral fellow in Computer Science at the University of Toronto. Research on AI fairness, platform governance, and community-driven evaluations."
+}
 </script>
 
 
