--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="row mb-5">
 
-            <div class="col-lg-3 col-md-4 mb-4 mb-md-0" data-nosnippet>
+            <div class="col-lg-3 col-md-4 mb-4 mb-md-0">
               <div class="text-center ">
                 <br>
                 <img class="img-fluid rounded-circle shadow" 
@@ -137,7 +137,7 @@
                 </ul>
               </div>
               <br>  
-              <div class="subheading mb-1 text-primary">Name Pronunciation</div>
+              <div class="subheading mb-1 text-primary" data-nosnippet>Name Pronunciation</div>
 	            	<p class="justify">
                   Dip-toh (Dipto) Daash (Das). Dipto means <em>bright</em> in Bengali. Play the audio below to listen to the pronunciation of my name.
                   <audio controls class="name-audio">
