--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
         <div class="my-auto">
           <h1 class="mb-0">Dipto
             <span class="text-primary">Das</span>
+            <!-- <span class="phd">PhD</span> -->
           </h1>
-          <div class="subheading mb-3" aria-hidden="true" title="Researcher, Educator, Engineer">&#8203;<!-- do not remove the &#8203; token -- it is a zero-width character -->
+          <div class="subheading mb-3" aria-hidden="true"title="Researcher, Educator, Engineer">&#8203; <!-- title="Researcher, Educator, Engineer">&#8203; do not remove the &#8203; token -- it is a zero-width character -->
           	<span class="typed" aria-hidden="true"></span>
           </div>
           <div class="row mb-5">
@@ -971,6 +972,22 @@
     <!-- Custom scripts for this template -->
     <script src="js/resume.js"></script>
     <script src="vendor/typed/typed.js"></script>
+
+    <!-- Initialize Typed.js -->
+    <!-- <script>
+      $(function () {
+        $('.typed').typed({
+          strings: ['<strong>Researcher:</strong> HCI, UX, and AI Fairness', '<strong>Educator:</strong> Computer &amp; Information Science', '<strong>Engineer</strong> and Programmer'],
+          typeSpeed: 55,
+          backSpeed: 35,
+          backDelay: 1100,
+          startDelay: 300,
+          loop: true,           // don’t loop back
+          showCursor: true,
+          cursorChar: ''        // optional cursor style
+        });
+      });
+    </script> -->
   <!--   <script src="vendor/isotope/isotope.pkgd.js"></script>
     <script src="vendor/magnific-popup/magnific-popup.js"></script> -->
 
