--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <title>Dipto Das</title>
-
+    <meta name="author" content="Dipto Das">
     <meta name="description" content="Postdoctoral fellow in Computer Science at the University of Toronto. I study the sociotechnical systems and their impacts, focusing on AI fairness, platform governance, and community-centered evaluation." />
     <meta name="robots" content="max-snippet:160" />
     <meta property="og:description" content="Human-Computer Interaction and Algorithmic Fairness researcher and Postdoctoral fellow in Computer Science at the University of Toronto" />
