--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Dipto Das</title>
     <meta name="author" content="Dipto Das">
     <meta name="description" content="Postdoctoral fellow in Computer Science at the University of Toronto. I study the sociotechnical systems and their impacts, focusing on AI fairness, platform governance, and community-centered evaluation." />
-    <meta name="robots" content="max-snippet:160" />
+    <!-- <meta name="robots" content="max-snippet:160" /> -->
     <meta property="og:description" content="Human-Computer Interaction and Algorithmic Fairness researcher and Postdoctoral fellow in Computer Science at the University of Toronto" />
 
     <!-- Bootstrap core CSS -->
