--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Dipto Das</title>
     <meta name="author" content="Dipto Das">
     <meta name="description" content="Postdoctoral fellow in Computer Science at the University of Toronto. I study the sociotechnical systems and their impacts, focusing on AI fairness, platform governance, and community-centered evaluation." />
-    <!-- <meta name="robots" content="max-snippet:160" /> -->
+    <meta name="robots" content="max-snippet:210" />
     <meta property="og:description" content="Human-Computer Interaction and Algorithmic Fairness researcher and Postdoctoral fellow in Computer Science at the University of Toronto" />
 
     <!-- Bootstrap core CSS -->
@@ -34,7 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sarala:wght@300;400;700;900&family=Lora:wght@400;500;600;700&family=Comfortaa:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=SiyamRupali:wght@300;400;700&display=swap" rel="stylesheet">
 
 
     <!-- <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
