--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 </li>
                 <li>
                     <p>
-                        Louisa Kayah Williams, Rayan Awad Alim, Reem Talhouk, Marisol Wong-Villacres, Lynn Kirabo Hixon, Carleen Maitland, Tajanae Harris, Vishal Sharma, <strong>Dipto Das</strong>, Bryan Semaan, Syed Ishtiaque Ahmed, and Robert Soden. 2024. <a href="files/posters/CSCW24_climate.pdf">HCI, Mobility Justice, and Migration in the Face of Climate Crisis.</a> In <em>ACM Computer Supported Cooperative Work and Social Computing (CSCW '24).</em>
+                        Louisa Kayah Williams, Rayan Awad Alim, Reem Talhouk, Marisol Wong-Villacres, Lynn Kirabo Hixon, Carleen Maitland, Tajanae Harris, Vishal Sharma, <strong>Dipto Das</strong>, Bryan Semaan, Syed Ishtiaque Ahmed, and Robert Soden. 2024. <a href="files/posters/CSCW24_climate.pdf">HCI, Mobility Justice, and Migration in the Face of Climate Crisis.</a> In <em>ACM Computer Supported Cooperative Work and Social Computing (CSCW&nbsp;'24).</em>
                     </p>
                     <span class="pub-meta d-none"
                       data-type="workshop">
@@ -723,7 +723,7 @@
                     <p>
                         <strong>Dipto Das</strong> and Anthony J. Clark. 2019. 
                         <a href="files/papers/HCC19_sarcasm.pdf" target="_blank">Construct of Sarcasm on social media platform.</a> 
-                        In <em>Proceedings of IEEE international conference on humanized computing and communication (HCC '19)</em>.
+                        In <em>Proceedings of IEEE international conference on humanized computing and communication (HCC&nbsp;'19)</em>.
                     </p>
                     <span class="pub-meta d-none"
                       data-type="full"
