--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                       <img src="img/cuboulder_logo.png" class="img-fluid" alt="CU Boulder" style="max-height: 60px;">
                     </div>
                     <div class="col-6 col-md-3 mb-3">
-                      <img src="img/ifp_logo.png" class="img-fluid" alt="IFP" style="max-height: 60px;">
+                      <img src="img/ihep_logo.png" class="img-fluid" alt="IFP" style="max-height: 60px;">
                     </div>
                     <div class="col-6 col-md-3 mb-3">
                       <img src="img/nsf_logo.png" class="img-fluid" alt="NSF" style="max-height: 60px;">
