--- a/index.html
+++ b/index.html
@@ -392,16 +392,6 @@
                 <!-- under review -->
                 <li>
                   <p>
-                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. <a href="files/papers/political.pdf" target="_blank">Auditing Political Bias in Text Generation by GPT-4 using Sociocultural and Demographic Personas: Case of Bengali Ethnolinguistic Communities</a>. Submitted.
-                  </p>
-                  <span class="pub-meta d-none"
-                    data-year="under review"
-                    data-type="full"
-                    data-methods="audit,nlp">
-                  </span>
-                </li>
-                <li>
-                  <p>
                     <strong>Dipto Das</strong>, Achhiya Sultana, Ankit Singh Chauhan, Saadia Binte Alam, Mohammad Shidujaman, Sunandan Chakraborty, and Syed Ishtiaque Ahmed. <a href="files/papers/Mod_Guide.pdf" target="_blank">Can LLM-based Content Moderation Identify Insensitive Speech toward Indigenous Ethnic and Religious Minorities?</a>. Submitted.    
                   </p>
                   <span class="pub-meta d-none"
@@ -418,6 +408,16 @@
                     data-year="under review"
                     data-type="full"
                     data-methods="audit,nlp,survey,quant">
+                  </span>
+                </li>
+                <li>
+                  <p>
+                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. <a href="files/papers/IJCNLP_AACL25-BHASHA_political.pdf" target="_blank">Auditing Political Bias in Text Generation by GPT-4 using Sociocultural and Demographic Personas: Case of Bengali Ethnolinguistic Communities</a>. Submitted.
+                  </p>
+                  <span class="pub-meta d-none"
+                    data-year="under review"
+                    data-type="full"
+                    data-methods="audit,nlp">
                   </span>
                 </li>
                 <li>
