--- a/index.html
+++ b/index.html
@@ -412,10 +412,9 @@
                 </li>
                 <li>
                   <p>
-                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. <a href="files/papers/IJCNLP_AACL25-BHASHA_political.pdf" target="_blank">Auditing Political Bias in Text Generation by GPT-4 using Sociocultural and Demographic Personas: Case of Bengali Ethnolinguistic Communities</a>. Submitted.
+                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. 2025. <a href="files/papers/IJCNLP_AACL25-BHASHA_political.pdf" target="_blank">Auditing Political Bias in Text Generation by GPT-4 using Sociocultural and Demographic Personas: Case of Bengali Ethnolinguistic Communities</a>. In <em>Proceedings of Workshop on Benchmarks, Harmonization, Annotation, and Standardization for Human-Centric AI in Indian Languages at the International Joint Conference on Natural Language Processing \& Asia-Pacific Chapter of the Association for Computational Linguistics (IJCNLP/AACL-BHASHA '25')</em>.
                   </p>
                   <span class="pub-meta d-none"
-                    data-year="under review"
                     data-type="full"
                     data-methods="audit,nlp">
                   </span>
