--- a/index.html
+++ b/index.html
@@ -412,7 +412,20 @@
                 </li>
                 <li>
                   <p>
-                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. 2025. <a href="files/papers/IJCNLP_AACL25-BHASHA_political.pdf" target="_blank">Auditing Political Bias in Text Generation by GPT-4 using Sociocultural and Demographic Personas: Case of Bengali Ethnolinguistic Communities</a>. In <em>Proceedings of Workshop on Benchmarks, Harmonization, Annotation, and Standardization for Human-Centric AI in Indian Languages at the International Joint Conference on Natural Language Processing &amp; Asia-Pacific Chapter of the Association for Computational Linguistics (IJCNLP/AACL-BHASHA '25')</em>.
+                    <strong>Dipto Das</strong>, Afrin Prio, Pritu Saha, Shion Guha, and Syed Ishtiaque Ahmed. 2026. 
+                    <a href="files/papers/CHI26_remittance.pdf" target="_blank">How do the Global South Diasporas Mobilize for Transnational Political Change?</a>. 
+                    In <em>Proceedings of ACM CHI Conference on Human Factors in Computing Systems (CHI '26)</em>.
+                  </p>
+                  <span class="pub-meta d-none"
+                    data-type="full"
+                    data-methods="interview,qual">
+                  </span>
+                </li>
+                <li>
+                  <p>
+                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. 2025. 
+                    <a href="files/papers/IJCNLP_AACL25-BHASHA_political.pdf" target="_blank">Auditing Political Bias in Text Generation by GPT-4 using Sociocultural and Demographic Personas: Case of Bengali Ethnolinguistic Communities</a>. 
+                    In <em>Proceedings of Workshop on Benchmarks, Harmonization, Annotation, and Standardization for Human-Centric AI in Indian Languages at the International Joint Conference on Natural Language Processing &amp; Asia-Pacific Chapter of the Association for Computational Linguistics (IJCNLP/AACL-BHASHA '25')</em>.
                   </p>
                   <span class="pub-meta d-none"
                     data-type="full"
@@ -421,7 +434,9 @@
                 </li>
                 <li>
                   <p>
-                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. 2025. <a href="files/posters/BTPD.pdf" target="_blank">BTPD: A Multilingual Hand-curated Dataset of Bengali Transnational Political Discourse Across Online Communities</a>. In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '25).</em>
+                    <strong>Dipto Das</strong>, Syed Ishtiaque Ahmed, and Shion Guha. 2025. 
+                    <a href="files/posters/BTPD.pdf" target="_blank">BTPD: A Multilingual Hand-curated Dataset of Bengali Transnational Political Discourse Across Online Communities</a>. 
+                    In <em>ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW '25).</em>
                   </p>
                   <span class="pub-meta d-none"
                     data-type="short"
@@ -430,7 +445,9 @@
                 </li>
                 <li>
                     <p>
-                      Morgan Klaus Scheuerman, Katy Weathington, Adrian Petterson, Dylan Thomas Doyle, <strong>Dipto Das</strong>, Michael Ann DeVito, and Jed R. Brubaker. 2025. <a href="files/papers/TOCHI25_transphobia.pdf" target="_blank">Transphobia is in the Eye of the Prompter: Trans-Centered Perspectives on Large Language Models.</a> In <em>ACM Transactions on Computer-Human Interaction (TOCHI)</em>.
+                      Morgan Klaus Scheuerman, Katy Weathington, Adrian Petterson, Dylan Thomas Doyle, <strong>Dipto Das</strong>, Michael Ann DeVito, and Jed R. Brubaker. 2025. 
+                      <a href="files/papers/TOCHI25_transphobia.pdf" target="_blank">Transphobia is in the Eye of the Prompter: Trans-Centered Perspectives on Large Language Models.</a> 
+                      In <em>ACM Transactions on Computer-Human Interaction (TOCHI)</em>.
                     </p>
                     <span class="pub-meta d-none"
                       data-type="full"
