--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                   </p>
                   <span class="pub-meta d-none"
                     data-type="full"
-                    data-methods="audit,nlp">
+                    data-methods="audit,nlp,quant">
                   </span>
                 </li>
                 <li>
