--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
           <h2 class="mb-5">CV/Resume</h2>
           <div class="container-fluid p-0">
             <div class="subheading mb-3 text-primary"><a href="files/cv/CV.pdf" target="_blank">Complete CV</a></div>
-            <div class="subheading mb-3 text-primary"><a href="files/cv/Resume.pdf" target="_blank">Brief Resume</a></a></div>
+            <div class="subheading mb-3 text-primary"><a href="#" target="_blank">Brief Resume</a></a></div>
           </div>
         </div>
       </section>
